fix the navs alignment

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,12 +1,33 @@
 .appWrapper {
   // Positioning
-
   padding-top: 2.5rem;
   margin-left: 6rem;
   margin-right: 6rem;
 
   // Display & Boxmodel
-
+  display: flex;
+  justify-content: space-around;
   max-width: 100%;
-  height: 100vh;
+  // height: 100vh;
+}
+
+.navOneContainer {
+  a + a {
+    margin-left: 3.75rem;
+  }
+}
+
+.navTwoContainer {
+  display: flex;
+
+  a + a {
+    margin-left: 3.75rem;
+  }
+}
+
+.iconWapper {
+  display: flex;
+  align-items: center;
+
+  margin-right: 3.75rem;
 }
